# aoc2023

./: aoc.opam  dune-project  ewd.py  ewd2.py  out.txt  out2.txt  s1.txt
day1/: dune
day10_1/: dune  main.ml
day10_2/: main.ml
day11_1/: dune  main.ml  pvector.ml
day11_2/: dune  main.ml
day12_1/: dune  main.ml
day12_2/: dune  main.ml
day13_1/: dune  main.ml
day13_2/: dune  main.ml
day14_1/: dune  main.ml
day14_2/: dune  main.ml
day15_1/: dune  main.ml
day15_2/: dune  main.ml
day16_1/: dune  main.ml
day16_2/: dune  main.ml
day17_1/: dune  main.ml
day17_2/: dune  main.ml
day18_1/: dune  main.ml
day18_2/: dune  main.ml
day19_1/: dune  main.ml
day19_2/: dune  main.ml
day2/: dune  main.ml
day20_1/: dune  main.ml
day20_2/: dune  main.ml
day21_1/: dune  main.ml
day21_2/: dune  main.ml
day3/: dune  main.ml
day3_1/: dune  main.ml
day3_2/: dune  main.ml
day4_1/: dune  main.ml
day4_2/: main.ml
day5_1/: dune  main.ml
day5_2/: main.ml
day6_1/: dune  main.ml
day6_2/: main.ml
day7_1/: dune  main.ml
day7_2/: main.ml
day8_1/: dune  main.ml
day8_2/: main.ml
day9_1/: dune  main.ml
day9_2/: main.ml
lib/: pqueue.ml  public.ml  pvector.ml  util.ml  util.mli
test/: test_aoc.ml
